--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <section id="about" class="about">
         <div class="container">
             <h2 class="section-title">About Me</h2>
-            <div class="about-content">
-                <div class="about-text">
+            <div class="about-flex">
+                <div class="about-text-left">
                     <p>
                         I'm an AI Engineer passionate about building intelligent systems that solve real-world problems. 
                         With expertise in machine learning, automation, and agentic AI, I create solutions that bridge 
@@ -75,6 +75,9 @@
                         My focus lies in developing autonomous agents, implementing Model Context Protocol (MCP), 
                         and leveraging large language models to create sophisticated AI-driven applications.
                     </p>
+                </div>
+                <div class="about-image-right">
+                    <img src="yashraj.jpg" alt="Yashraj Dudhe" />
                 </div>
             </div>
         </div>
